crates/general/fixtures/invalid/separator_swaps.zt
-- Expected: parse-error (≥1 diagnostic + lossless round-trip)
-- Spec: values §6.5/§6.6, records §10.2 — lists/records use `;`, tuples/variants use `,`.
-- Lists using `,`; records using `,`; tuples using `;`; mixed type-param and union separators.
-- `record with { ... }` is not a v0 form (records §10.2 — only v1 has record update).

[1, 2, 3]

[true, false, true]

["a", "b", "c"]

[#foo, #bar, #baz]

{ a = 1, b = 2, c = 3 }

{ host = "localhost", port = 8080, tls = true }

(#circle; radius = 5.0)

(#rect; width = 4.0; height = 3.0)

(#tagged; field = "value")

[1; 2; 3]

[1 2 3]

{ a = 1; b = 2; c = 3 }

{ a = 1. b = 2. c = 3. }

(#a,)

(#b, x = 1,)

[1; 2; 3;,]

server with { port = 9000; }

{ host = "x"; port = 8080 }

[1; 2; 3

(#just, value = 42

{ name = "test";

type [ #a, #b, #c ]

type [ #a; #b; #c, ]

[A, B;]

[A; B,]
